simple gui that returns points that match query

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>title</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+         <script src="../static/js/trend.js"></script>
+
     </head>
     <body>
         <h1> This is our Home Page </h1>
+        <input id="query" type="text" placeholder="Entery Query String"> </input>
+        <button type="button" onclick="test_api()" name="button">Test API!</button>
+        <div id="results"> </div>
 
     </body>
 </html>
