--- a/templates/api-test.html
+++ b/templates/api-test.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>title</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../static/js/trend.js"></script>
+        <script src="../static/js/api_test.js"></script>
         <link rel="stylesheet" href="../static/css/styles.css">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -25,13 +25,13 @@
                     <hr>
                     <ul class="nav flex-column">
                       <li class="nav-item">
-                        <a class="nav-link" href="/">
+                        <a class="nav-link" href="#">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                           Home <span class="sr-only">(current)</span>
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a class="nav-link" href="/">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
                           Trend Dashboard
                         </a>
@@ -49,7 +49,7 @@
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8080/api-test">
+                        <a class="nav-link active" href="http://localhost:8080/api-test">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
                           API Test
                         </a>
@@ -58,39 +58,13 @@
                   </div>
                 </nav>
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
-                    <h1 style="text-align:center;"> Trend Dashboard </h1>
+                    <h1 style="text-align:center;"> API Test </h1>
                     <div class="row">
-                        <div class="form-row">
-                            <div class="form-group col-md-2">
-                                <select class="building form-control">
-                                    <option value="@2">Evans</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="device form-control">
-                                    <option value="all">All Devices</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="floor form-control">
-                                    <option value="all">All Floors</option>
-                                    <option value="1">First</option>
-                                    <option value="2">Second</option>
-                                    <option value="3">Third</option>
-                                    <option value="4">Fourth</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="room form-control">
-                                    <option value="all">All Rooms</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div>
-                            <button type="button" onclick="test_api()" name="button" class="btn btn-primary form-control" style="width:75px">Search</button>
+                        <div class="input-group" style="width:400px; display:block; margin-right:auto; margin-left:auto">
+                            <input id="query" class="form-control" type="text" placeholder="Search" aria-label="Search" style="width:300px;">
+                            <span class="input-group-btn">
+                                <button type="button" onclick="test_api()" name="button" class="btn btn-primary form-control" style="width:75px">Search</button>
+                            </span>
                         </div>
                     </div>
                     <div id="results"> </div>
