--- a/templates/index.html
+++ b/templates/index.html
@@ -43,13 +43,13 @@
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/points">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
                           Points
                         </a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="http://localhost:8080/api-test">
+                        <a class="nav-link" href="/api-test">
                           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
                           API Test
                         </a>
@@ -59,38 +59,47 @@
                 </nav>
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-4">
                     <h1 style="text-align:center;"> Trend Dashboard </h1>
+                    <hr>
                     <div class="row">
-                        <div class="form-row">
-                            <div class="form-group col-md-2">
-                                <select class="building form-control">
-                                    <option value="@2">Evans</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="device form-control">
-                                    <option value="all">All Devices</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="floor form-control">
-                                    <option value="all">All Floors</option>
-                                    <option value="1">First</option>
-                                    <option value="2">Second</option>
-                                    <option value="3">Third</option>
-                                    <option value="4">Fourth</option>
-                                </select>
-                            </div>
-                            <div class="form-group col-md-2">
-                                <select class="room form-control">
-                                    <option value="all">All Rooms</option>
-                                    <option value="@0">Unknown</option>
-                                </select>
+                        <div id="series-block">
+                            <label> Series 1 </label>
+                            <div class="form-row series input-group col-md-9" id="series0">
+                                <div class="form-group col-md-2">
+                                    <select class="building form-control">
+                                        <option value="@2">Evans</option>
+                                        <option value="@0">Unknown</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2">
+                                    <select class="device form-control">
+                                        <option value="all">All Devices</option>
+                                        <option value="@0">Unknown</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2">
+                                    <select class="floor form-control">
+                                        <option value="all">All Floors</option>
+                                        <option value="1">First</option>
+                                        <option value="2">Second</option>
+                                        <option value="3">Third</option>
+                                        <option value="4">Fourth</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-2">
+                                    <select class="room form-control">
+                                        <option value="all">All Rooms</option>
+                                        <option value="@0">Unknown</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-1">
+                                    <button type="button" class="btn btn-primary" id="addSeriesBtn">Add Series</button>
+                                </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="form-row col-md-9">
                             <button type="button" onclick="test_api()" name="button" class="btn btn-primary form-control" style="width:75px">Search</button>
+                        </div>
+                        <div>
                         </div>
                     </div>
                     <div id="results"> </div>
