--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,6 @@
 
     </head>
     <body>
-        <nav>
-        </nav>
         <div class="container-fluid">
             <div class="row">
                 <nav class="col-md-2 d-none d-md-block bg-light sidebar" style="background-color: #f8f9fa">
@@ -62,44 +60,31 @@
                     <hr>
                     <div class="row">
                         <div id="series-block">
-                            <label> Series 1 </label>
-                            <div class="form-row series input-group col-md-9" id="series0">
-                                <div class="form-group col-md-2">
-                                    <select class="building form-control">
-                                        <option value="@2">Evans</option>
-                                        <option value="@0">Unknown</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-2">
-                                    <select class="device form-control">
-                                        <option value="all">All Devices</option>
-                                        <option value="@0">Unknown</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-2">
-                                    <select class="floor form-control">
-                                        <option value="all">All Floors</option>
-                                        <option value="1">First</option>
-                                        <option value="2">Second</option>
-                                        <option value="3">Third</option>
-                                        <option value="4">Fourth</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-2">
-                                    <select class="room form-control">
-                                        <option value="all">All Rooms</option>
-                                        <option value="@0">Unknown</option>
-                                    </select>
-                                </div>
-                                <div class="form-group col-md-1">
-                                    <button type="button" class="btn btn-primary" id="addSeriesBtn">Add Series</button>
+                            <div class="form-row series input-group col-md-9" id="series-0">
+                                <div id="series0-line-0" class="form-group row line">
+                                    <div class="col-md-2">
+                                        <select id="series-0-argType-0" class="argType form-control">
+                                            <option value="" selected disabled hidden>Choose Type</option>
+                                            <option value="building">building</option>
+                                            <option value="device">device</option>
+                                            <option value="floor">floor</option>
+                                            <option value="room">room</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-2">
+                                        <select id="series-0-argValue-0" class="argValue form-control">
+                                        </select>
+                                    </div>
+                                    <div class="col-md-1">
+                                        <button type="button" class="btn btn-primary addLineBtn" id="series0-btn">Add New Line</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="form-row col-md-9">
                             <button type="button" onclick="test_api()" name="button" class="btn btn-primary form-control" style="width:75px">Search</button>
-                        </div>
-                        <div>
                         </div>
                     </div>
                     <div id="results"> </div>
@@ -108,3 +93,37 @@
         </div>
     </body>
 </html>
+
+<!-- <div class="form-row series input-group col-md-9" id="series0">
+    <div class="form-group col-md-2">
+        <select class="building form-control">
+            <option value="@2">Evans</option>
+            <option value="@0">Unknown</option>
+        </select>
+    </div>
+    <div class="form-group col-md-2">
+        <select class="device form-control">
+            <option value="all">All Devices</option>
+            <option value="@0">Unknown</option>
+        </select>
+    </div>
+    <div class="form-group col-md-2">
+        <select class="floor form-control">
+            <option value="all">All Floors</option>
+            <option value="1">First</option>
+            <option value="2">Second</option>
+            <option value="3">Third</option>
+            <option value="4">Fourth</option>
+        </select>
+    </div>
+    <div class="form-group col-md-2">
+        <select class="room form-control">
+            <option value="all">All Rooms</option>
+            <option value="@0">Unknown</option>
+        </select>
+    </div>
+    <div class="form-group col-md-1">
+        <button type="button" class="btn btn-primary" id="addSeriesBtn">Add Series</button>
+    </div>
+</div>
+</div> -->
