--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -97,10 +97,26 @@
                             <div class="col-md-2">
                                 <select id="series-0-argType-0" class="argType form-control">
                                     <option value="" selected disabled hidden>Choose Type</option>
-                                    <option value="building">building</option>
-                                    <option value="device">device</option>
-                                    <option value="floor">floor</option>
-                                    <option value="room">room</option>
+                                    <optgroup label="operators">
+                                        <option value="and">and</option>
+                                        <option value="or">or</option>
+                                        <option value="not">not</option>
+                                        <option value="(">(</option>
+                                        <option value=")">)</option>
+                                    </optgroup>
+                                    <optgroup label="foobar">
+                                        <option value="building">building</option>
+                                        <option value="device">device</option>
+                                        <option value="room">room</option>
+                                        <option value="tag">tag</option>
+                                        <option value="floor">floor</option>
+                                        <option value="unit">unit</option>
+                                        <option value="type">type</option>
+                                        <option value="measurement">measurement</option>
+                                    </optgroup>
+
+
+
                                 </select>
                             </div>
                             <div class="col-md-2">
@@ -144,37 +160,3 @@
 </div>
 </body>
 </html>
-
-<!-- <div class="form-row series input-group col-md-9" id="series0">
-    <div class="form-group col-md-2">
-        <select class="building form-control">
-            <option value="@2">Evans</option>
-            <option value="@0">Unknown</option>
-        </select>
-    </div>
-    <div class="form-group col-md-2">
-        <select class="device form-control">
-            <option value="all">All Devices</option>
-            <option value="@0">Unknown</option>
-        </select>
-    </div>
-    <div class="form-group col-md-2">
-        <select class="floor form-control">
-            <option value="all">All Floors</option>
-            <option value="1">First</option>
-            <option value="2">Second</option>
-            <option value="3">Third</option>
-            <option value="4">Fourth</option>
-        </select>
-    </div>
-    <div class="form-group col-md-2">
-        <select class="room form-control">
-            <option value="all">All Rooms</option>
-            <option value="@0">Unknown</option>
-        </select>
-    </div>
-    <div class="form-group col-md-1">
-        <button type="button" class="btn btn-primary" id="addSeriesBtn">Add Series</button>
-    </div>
-</div>
-</div> -->
