--- a/templates/points.html
+++ b/templates/points.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>title</title>
+        <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="../static/js/points.js"></script>
         <link rel="stylesheet" href="../static/css/styles.css">
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -77,10 +77,13 @@
                         <div id="point-data" class="col-md-8">
                             <h4 id="point-title"> Visualization </h4>
                             <hr>
+                            <div class="col-md-8 svg" id="linegraph"></div>
                         </div>
                     </div>
                 </main>
             </div>
         </div>
+        <script type="text/javascript" src="../static/js/initialviz.js"></script>
+        <script src="../static/js/points.js"></script>
     </body>
 </html>
