--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -14,61 +14,50 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-  <!-- js for vis -->
-
-  <!-- boostrap-select -->
-  <!--<link rel="stylesheet"-->
-  <!--href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.2/css/bootstrap-select.min.css">-->
-  <!--<script-->
-  <!--src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.2/js/bootstrap-select.min.js"></script>-->
 
 </head>
 <body>
-<!--<div class="bubble">-->
-<!--<span class="bubble-left" style="width: 150px">-->
 <div>
   <form id="series-0" class="series">
-    <select class="selectpicker building" multiple>
+    <select class="building" multiple>
     </select>
-    <select class="selectpicker floor" multiple>
+    <select class="floor" multiple>
     </select>
-    <select class="selectpicker room" multiple>
+    <select class="room" multiple>
     </select>
-    <select class="selectpicker device" multiple>
+    <select class="device" multiple>
     </select>
-    <select class="selectpicker point" multiple>
+    <select class="point" multiple>
     </select>
-    <select class="selectpicker tag" multiple>
+    <select class="tag" multiple>
     </select>
-    <select class="selectpicker type" multiple>
+    <select class="type" multiple>
     </select>
-    <select class="selectpicker unit" multiple>
+    <select class="unit" multiple>
     </select>
-    <select class="selectpicker measurement" multiple>
+    <select class="measurement" multiple>
     </select>
   </form>
 </div>
 <div class="row">
-                <h1>Initial Line Graph</h1>
+  <h1>Initial Line Graph</h1>
 
-                <div class="col-md-9 svg" id="linegraph"></div>
+  <div class="col-md-9 svg" id="linegraph"></div>
 
+  <div class="legend">
+    <div class="legend-title">Key</div>
+    <ul class="bars">
+      <li><span style="background:#b2746b"></span>First series</li>
+      <li><span style="background:#7a91c1"></span>Second series</li>
+      <li><span style="background:#86b265"></span>Third series</li>
+    </ul>
+  </div>
 
-                <div class="legend">
-                    <div class="legend-title">Key</div>
-                    <ul class="bars">
-                        <li><span style="background:#b2746b"></span>First series</li>
-                        <li><span style="background:#7a91c1"></span>Second series</li>
-                        <li><span style="background:#86b265"></span>Third series</li>
-                    </ul>
-                </div>
-
-            </div>
+</div>
 
 <button id="submit-search-query">Search</button>
 
 </body>
 <script type="text/javascript" src="../static/js/initialviz.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
-
 </html>
