--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -143,18 +143,45 @@ span {
     border: 1px solid black;
 }
 
-div.legend {
-    position: relative;
-    bottom: 500;
-    left: 700;
-    font-size: 15px;
-}
 
 h1 {
     position: relative;
     left: 325;
 }
 
-.svg {
-    position: relative;
+
+.axis--y path {
+    display: none;
+}
+
+.points {
+    fill: none;
+    stroke: #aaa;
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    stroke-width: 1.5px;
+}
+
+.line--hover {
+    stroke: #000;
+}
+
+.focus text {
+    text-anchor: middle;
+    text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+}
+
+.voronoi path {
+    fill: none;
+    pointer-events: all;
+}
+
+.voronoi--show path {
+    stroke: red;
+    stroke-opacity: 0.2;
+}
+
+#form {
+    top: 20px;
+    right: 30px;
 }
