--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -1,57 +1,61 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>title</title>
-  <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="../static/js/trend.js"></script>
-  <!--<link rel="stylesheet" href="../static/css/styles.css">-->
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta charset="UTF-8">
+    <title>title</title>
+    <script src="http://d3js.org/d3.v3.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="../static/js/trend.js"></script>
+    <!--<link rel="stylesheet" href="../static/css/styles.css">-->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
 
 </head>
 <body>
 <div>
-  <form id="series-0" class="series">
-    <select class="building" multiple>
-    </select>
-    <select class="floor" multiple>
-    </select>
-    <select class="room" multiple>
-    </select>
-    <select class="device" multiple>
-    </select>
-    <select class="point" multiple>
-    </select>
-    <select class="tag" multiple>
-    </select>
-    <select class="type" multiple>
-    </select>
-    <select class="unit" multiple>
-    </select>
-    <select class="measurement" multiple>
-    </select>
-  </form>
+    <form id="series-0" class="series">
+        <select class="building" multiple>
+        </select>
+        <select class="floor" multiple>
+        </select>
+        <select class="room" multiple>
+        </select>
+        <select class="device" multiple>
+        </select>
+        <select class="point" multiple>
+        </select>
+        <select class="tag" multiple>
+        </select>
+        <select class="type" multiple>
+        </select>
+        <select class="unit" multiple>
+        </select>
+        <select class="measurement" multiple>
+        </select>
+    </form>
+    <input type="text" name="datetimes" id="daterange" />
 </div>
 <div class="row">
-  <h1>Initial Line Graph</h1>
+    <h1>Initial Line Graph</h1>
 
-  <div class="col-md-9 svg" id="linegraph"></div>
+    <div class="col-md-9 svg" id="linegraph"></div>
 
-  <div class="legend">
-    <div class="legend-title">Key</div>
-    <ul class="bars">
-      <li><span style="background:#b2746b"></span>First series</li>
-      <li><span style="background:#7a91c1"></span>Second series</li>
-      <li><span style="background:#86b265"></span>Third series</li>
-    </ul>
-  </div>
+    <div class="legend">
+        <div class="legend-title">Key</div>
+        <ul class="bars">
+            <li><span style="background:#b2746b"></span>First series</li>
+            <li><span style="background:#7a91c1"></span>Second series</li>
+            <li><span style="background:#86b265"></span>Third series</li>
+        </ul>
+    </div>
 
 </div>
 
