Trying to connect the heatmap to the dashboard.

--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -15,7 +15,7 @@
         </select>
         <select class="tag" multiple>
         </select>
-        <select class="type" multiple>
+        <select class="type">
         </select>
         <select class="unit" multiple>
         </select>
@@ -44,5 +44,8 @@
 <button id="submit-search-query">Search</button>
 
 <script type="text/javascript" src="../static/js/initialviz.js"></script>
+<script src="https://d3js.org/colorbrewer.v1.min.js"></script>
+<script src="../static/js/heatmap.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
+
 {% endblock %}
