Search scrolling now...

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -158,3 +158,27 @@ h1 {
 .svg {
     position: relative;
 }
+
+#container {
+    position: relative;
+    height: 9em;
+    width: 90%;
+    margin: 20px auto;
+    background: #f8f9fa;
+    text-align: left;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    vertical-align: middle;
+}
+
+#container select {
+    display: inline-block;
+    width: 14em;
+    height: 6em;
+    margin: 0.5em;
+    border: 1px solid #A9A9A9;
+    padding: 3px;
+    white-space: normal;
+    text-align: center;
+}
