--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -23,7 +23,10 @@
         </select>
     </form>
 </div>
-<input type="text" name="datetimes" id="daterange"/>
+<div id="timepicker">
+    <input type="text" name="datetimes" id="daterange"/>
+    <button id="submit-search-query">Search</button>
+</div>
 <div class="row col-md-10">
     <h1>Initial Line Graph</h1>
 
@@ -39,9 +42,6 @@
     </div>
 
 </div>
-
-
-<button id="submit-search-query">Search</button>
 
 <script type="text/javascript" src="../static/js/initialviz.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
