Linked heatmap to search

--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -15,7 +15,7 @@
         </select>
         <select class="tag" multiple>
         </select>
-        <select class="type">
+        <select class="type" multiple>
         </select>
         <select class="unit" multiple>
         </select>
@@ -28,7 +28,7 @@
 <div class="row">
     <h1>Initial Line Graph</h1>
 
-    <div class="col-md-9 svg" id="linegraph"></div>
+    <div class="col-md-9 svg" id="visualization"></div>
 
     <div class="legend">
         <div class="legend-title">Key</div>
