Extracted backend URL to environment variable

--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -26,7 +26,7 @@
     <button id="submit-search-query">Search</button>
 </div>
 <div class="row">
-    <h1>Initial Line Graph</h1>
+    <h1>Visualization</h1>
 
     <div class="col-md-9 svg" id="visualization"></div>
 
