--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css"/>
+    <script>BACKEND_URL = "{{ backend_url }}";</script>
 </head>
 
 <body>
