--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -21,9 +21,11 @@
         </select>
         <select class="measurement" multiple>
         </select>
+        <p class="verification-text"> </p>
     </form>
     <input type="text" name="datetimes" id="daterange"/>
     <button id="submit-search-query">Search</button>
+
 </div>
 <div class="row">
     <h1>Visualization</h1>
