--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -32,26 +32,25 @@
 <div class="row col-md-10">
     <h1>Visualization</h1>
     <div class="col-md-8 svg" id="visualization"></div>
-    <label id="form" for="show-voronoi">
-        Show Voronoi
-        <input type="checkbox" id="show-voronoi" disabled>
-    </label>    
-    <div class="legend col-md-2">
+    <!--<label id="form" for="show-voronoi">-->
+        <!--Show Voronoi-->
+        <!--<input type="checkbox" id="show-voronoi" disabled>-->
+    <!--</label>    -->
+    <!--<div class="legend col-md-2">-->
 
-        <div class="legend-title">Key</div>
-        <ul class="bars">
-            <li><span style="background:#b2746b"></span>First series</li>
-            <li><span style="background:#7a91c1"></span>Second series</li>
-            <li><span style="background:#86b265"></span>Third series</li>
-        </ul>
-    </div>
+        <!--<div class="legend-title">Key</div>-->
+        <!--<ul class="bars">-->
+            <!--<li><span style="background:#b2746b"></span>First series</li>-->
+            <!--<li><span style="background:#7a91c1"></span>Second series</li>-->
+            <!--<li><span style="background:#86b265"></span>Third series</li>-->
+        <!--</ul>-->
+    <!--</div>-->
 
 </div>
 
 <script type="text/javascript" src="../static/js/initialviz.js"></script>
 <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 <script src="../static/js/heatmap.js"></script>
-<script type="text/javascript" src="../static/js/initialviz.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
 
 {% endblock %}
