--- a/templates/points.html
+++ b/templates/points.html
@@ -83,7 +83,7 @@
                 </main>
             </div>
         </div>
-        <script type="text/javascript" src="../static/js/initialviz.js"></script>
+        <script type="text/javascript" src="../static/js/linegraph.js"></script>
         <script src="../static/js/points.js"></script>
     </body>
 </html>
