--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -21,7 +21,7 @@
         </select>
         <select class="measurement" multiple>
         </select>
-        <p class="verification-text"></p>
+        <p class="point-verification-text"> </p>
     </form>
 </div>
 <div id="timepicker">
@@ -48,7 +48,7 @@
 
 </div>
 
-<script type="text/javascript" src="../static/js/initialviz.js"></script>
+<script type="text/javascript" src="../static/js/linegraph.js"></script>
 <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 <script src="../static/js/heatmap.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
