--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -51,6 +51,7 @@
 <script type="text/javascript" src="../static/js/linegraph.js"></script>
 <script src="https://d3js.org/colorbrewer.v1.min.js"></script>
 <script src="../static/js/heatmap.js"></script>
+<script type="text/javascript" src="../static/js/visualization.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
 
 {% endblock %}
