Started building the rules page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,6 +62,16 @@
                             Points
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/rules">
+                            <svg class="feather feather-circle" xmlns="http://www.w3.org/2000/svg" width="24"
+                                 height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1"
+                                 stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="10"></circle>
+                            </svg>
+                            Rules
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
