anomaly graph works

--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -35,7 +35,8 @@
     <input type="radio" name="visualization" value="graph"> Graph<br>
 </div>
 
-<div class="col-md-8 svg" id="visualization"></div>
+<div class="col-md-10 svg" id="visualization"></div>
+<div class="col-md-2" id="anomalous-points"></div>
 
 
 <div id="result-table">
@@ -51,7 +52,7 @@
     </table>
 </div>
 
-<script type="text/javascript" src="../static/js/linegraph.js"></script>
+<script type="text/javascript" src="../static/js/anomaliesgraph.js"></script>
 <script src="../static/js/anomalies.js"></script>
 <script type="text/javascript" src="../static/js/search_engine.js"></script>
 {% endblock %}
