--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -28,8 +28,8 @@
         <p class="value-verification-text"> </p>
     </form>
 </div>
-<div id="timepicker">
-    <input type="text" name="datetimes" id="daterange"/>
+<div id="timepicker" class="col-md-3">
+    <input type="text" class="form-control" name="datetimes" id="daterange" readonly/>
     <button id="submit-search-query">Graph</button>
 
 </div>
