add button for rule creation

--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -31,6 +31,7 @@
 <div id="timepicker">
     <input type="text" name="datetimes" id="daterange"/>
     <button id="submit-search-query">Search</button>
+    <button id="create-rule">Create Alert Rule</button>
     <input type="radio" name="visualization" value="table" checked> Table<br>
     <input type="radio" name="visualization" value="graph"> Graph<br>
 </div>
