changed color for anomaly ui

--- a/templates/anomalies.html
+++ b/templates/anomalies.html
@@ -8,7 +8,7 @@
 <h4>
     Point Selector
 </h4>
-<div id="search-container" style="height:200px">
+<div id="anomaly-container">
     <form id="series-0" class="series">
         <select class="building" multiple>
         </select>
@@ -48,7 +48,7 @@
             </div>
         </div>
         <div class="form-group col-md-2">
-            <button id="submit-search-query" type="button" class="btn btn-primary">Graph</button>
+            <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #563d7c">Graph</button>
         </div>
     </div>
     <div class="col-md-2">
