--- a/templates/search-engine.html
+++ b/templates/search-engine.html
@@ -8,7 +8,7 @@
 <h4>
     Point Selector
 </h4>
-<div id="search-container">
+<div id="trend-container">
     <form id="series-0" class="series"
     ">
     <select class="building" multiple>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="form-group col-md-2">
-            <button id="submit-search-query" type="button" class="btn btn-primary">Graph</button>
+            <button id="submit-search-query" type="button" class="btn btn-primary" style="background-color: #1967d2">Graph</button>
         </div>
     </div>
     <div class="col-md-3">
