--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -186,7 +186,7 @@ h1 {
     right: 30px;
 }
 
-#search-container {
+#trend-container {
     position: relative;
     height: 14em;
     width: 90%;
@@ -201,7 +201,7 @@ h1 {
     padding-top: 10px;
 }
 
-#search-container select {
+#trend-container select {
     display: inline-block;
     width: 14em;
     height: 11em;
@@ -211,6 +211,37 @@ h1 {
     white-space: normal;
     text-align: center;
     background-color: #5f9aec;
+    color: white;
+    border-radius: 15px;
+
+
+}
+
+#anomaly-container {
+    position: relative;
+    height: 14em;
+    width: 90%;
+    margin: 30px auto;
+    background: #563d7c;
+    text-align: left;
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    vertical-align: middle;
+    border-radius: 15px;
+    padding-top: 10px;
+}
+
+#anomaly-container select {
+    display: inline-block;
+    width: 14em;
+    height: 11em;
+    margin: 0.5em;
+    border: 1px solid #A9A9A9;
+    padding: 3px;
+    white-space: normal;
+    text-align: center;
+    background-color: #8465b3;
     color: white;
     border-radius: 15px;
 
