--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-light" style="background-color: #1967d2; margin-bottom: 0px;">
+<nav class="navbar navbar-dark" style="background-color: #343a40; margin-bottom: 0px;">
     <a class="navbar-title" href="#">Carleton Energy Dashboard</a>
 
 </nav>
